<resources>
    <string name="app_name">Chocobros</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string-array name="regions">
        <item>NA</item>
        <item>EU</item>
        <item>JP</item>
    </string-array>

    <string name="character_name">Character Name</string>
    <string name="guild_name">Guild</string>
    <string name="server">Server</string>

    <string name="search">Search</string>
    <string name="search_in_progress">Searching&#8230;</string>

    <string name="character_ranking_search_title">Search for a character\'s rankings</string>
    <string name="encounter_ranking_search_title">Search for rankings by encounter</string>
    <string name="character_parse_search_title">Search for a character\'s parses</string>
    <string name="guild_report_search_title">Search for a guild\'s reports</string>

    <string name="nav_menu_ranking">Ranking</string>
    <string name="nav_menu_ranking_character">Character</string>
    <string name="nav_menu_ranking_encounter">Encounter</string>

    <string name="nav_menu_parses">Parses</string>
    <string name="nav_menu_parses_character">Character</string>

    <string name="nav_menu_reports">Reports</string>
    <string name="nav_menu_reports_guild">Guild</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
