<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_menu_ranking">
        <menu>
            <item
                android:id="@+id/nav_ranking_char"
                android:title="@string/nav_menu_ranking_character" />
            <item
                android:id="@+id/nav_ranking_encounter"
                android:title="@string/nav_menu_ranking_encounter" />
        </menu>
    </item>

    <item android:title="@string/nav_menu_parses">
        <menu>
            <item
                android:id="@+id/nav_parses_character"
                android:title="@string/nav_menu_parses_character"/>
        </menu>
    </item>

    <item android:title="@string/nav_menu_reports">
        <menu>
            <item
                android:id="@+id/nav_reports_guild"
                android:title="@string/nav_menu_reports_guild" />
        </menu>
    </item>

</menu>
